--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
   <script src="script.js"></script>
+  <div class="go-to">
+    <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>>
+  </div>
+
   <div class="flex-containers">
     <div class="div1"> 
       <img src="icon-sedans.svg" class="first-image" >
