--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <script src="script.js"></script>
   <div class="go-to">
-    <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>>
+    <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>
   </div>
 
   <div class="flex-containers">
