--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
 </head>
 
 <body>
+  <header>
+    <a href="https://github.com/19zay/Zuri-Task">Go to repository link</a>
+  </header>
   <script src="script.js"></script>
   <div class="go-to">
     <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>
   </div>
 
+  <a href="https://github.com/19zay/Zuri-Task">
+    <button class="gotorep">
+      Go to repository
+    </button>
+  </a>
+  
   <div class="flex-containers">
     <div class="div1"> 
       <img src="icon-sedans.svg" class="first-image" >
