--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>
   </div>
 
-  <a href="https://github.com/19zay/Zuri-Task">
-    <button class="gotorep">
+  <a href="https://github.com/19zay/Zuri-Task" class="gotorep">
+    <button>
       Go to repository
     </button>
   </a>
