--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>
   </div>
 
-  <a href="https://github.com/19zay/Zuri-Task" class="gotorep">
-    <button>
-      Go to repository
-    </button>
-  </a>
+  <div class="go-to-rep">
+      <button type="submit" class="gotorep" onclick="location.href='https://github.com/19zay/A-responsive-form-Zuri';" >Go to repository</button>
+    </div> 
   
+
   <div class="flex-containers">
     <div class="div1"> 
       <img src="icon-sedans.svg" class="first-image" >
