--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <button type="submit" class="goto-button" onclick="location.href='grid.html';" >Go to gridbox</button>
   </div>
 
-  <div class="go-to-rep">
-      <button type="submit" class="gotorep" onclick="location.href='https://github.com/19zay/A-responsive-form-Zuri';" >Go to repository</button>
-    </div> 
+  <a href="https://github.com/19zay/Zuri-Task">
+    Go to repository link
+  </a> 
   
 
   <div class="flex-containers">
